# cpp-cli_scanner_and_watcher

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py
cmake/: warnings.cmake
src/app/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  errors.cpp  errors.h  scanner.cpp  scanner.h
tests/: CMakeLists.txt  scanner_tests.cpp  smoke_cli_tests.cpp
tools/: build_debug.bat  build_debug.sh  build_release.bat  build_release.sh  configure_debug.bat  configure_debug.sh  configure_release.bat  configure_release.sh
